[gd_scene load_steps=4 format=3 uid="uid://cjgiis2rgupwn"]

[ext_resource type="PackedScene" uid="uid://bti15y1duok20" path="res://Scenes/AbilityUI/AbilityTargetSelector/ability_arc.tscn" id="1_2khlg"]
[ext_resource type="Script" uid="uid://dtmuum85814po" path="res://Scenes/AbilityUI/AbilityTargetSelector/ability_target_selector.gd" id="1_khuyp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t4u6h"]
size = Vector2(4, 4)

[node name="AbilityTargetSelector" type="Node2D"]
script = ExtResource("1_khuyp")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -1)
collision_mask = 4
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_t4u6h")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="AbilityArc" parent="CanvasLayer" instance=ExtResource("1_2khlg")]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
